[package]
name = "sv"
version = "0.4.0"
description = "A Rust library for working with the BSV blockchain."
repository = "https://github.com/murphsicles/rust-sv"
authors = ["Dr. Roy Murphy", "Brenton Gunning"]
keywords = ["bitcoin", "sv", "cash", "crypto"]
license = "MIT"
edition = "2021"

[dependencies]
base58 = "0.2.0"
byteorder = "1.5.0"
dns-lookup = "2.0.4"
hex = "0.4.3"
linked-hash-map = "0.5.6"
log = { version = "0.4.22", features = ["max_level_trace", "release_max_level_warn"] }
murmur3 = "0.5.2"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.9.1"
ring = "0.17.14"
ripemd = "0.1.3"
secp256k1 = { version = "0.31.0", features = ["rand", "global-context"] }
secp256k1-sys = "0.11.0"
snowflake = "1.3.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
opt-level = "s"
lto = true
