[package]
name = "mahrustsv"
version = "0.7.0"
description = "A Rust library for working with the BSV blockchain."
repository = "https://github.com/nkkky/rust-sv"
authors = ["Brenton Gunning", "Dr. Roy Murphy", "-NИЖKY~"]
keywords = ["bitcoin", "sv", "cash", "crypto"]
license = "MIT"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base58 = "0.2.0"
byteorder = "1.5.0"
hex = "0.4.3"
rand = "0.9.2"
regex = "1.11.2"
ring = "0.17.14"
ripemd = "0.1.3"
secp256k1 = { version = "0.31.0", features = ["rand", "global-context"] }
secp256k1-sys = "0.11.0"
snowflake = "1.3.0"
linked-hash-map = "0.5.6"
dns-lookup = "3.0.0"
log = { version = "0.4.27", features = ["max_level_trace", "release_max_level_warn"] }
murmur3 = "0.5.2"
num-bigint = "0.4.6"
num-traits = "0.2.19"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
opt-level = "s"
lto = true
